site-header complete

--- a/src/index.pug
+++ b/src/index.pug
@@ -8,7 +8,7 @@ head
     title Document
 body
     header.site-header
-        nav.main-nav
+        nav.main-nav    
             .main-nav__social
                 a(href="#" target="_blank")
                     img(src="./img/vk.svg").main-nav-social--vk    
@@ -22,6 +22,10 @@ body
             img(src="./img/i.svg").main-nav__me
             h1.main-nav__aboutme__title Даниил Верещагин
             h3.main-nav__aboutme__subtitle Личный сайт вебразработчик
+        h1.main-nav__mainTitle Мои Работы   
+        img(src="./img/stars2.svg").main-nav__star
+        img(src="./img/bg.svg").main-nav__bg
+        
 
                         
     
