--- a/src/sass/modules/_main-nav.scss
+++ b/src/sass/modules/_main-nav.scss
@@ -1,8 +1,6 @@
 .main-nav {
     position: relative;
 
-
-
  &__social {
 
      padding-left:30px;
@@ -36,6 +34,9 @@
     padding:100px;
 
     &__title {
+
+        padding-top:40px;
+        padding-bottom: 20px;
         color:$white;
         font-family: 'Roboto Regular'sans-serif;
         font-weight: bold;
@@ -46,7 +47,36 @@
       
     }
 
+    }
+    &__bg {
+        width: 100%;
+        opacity: 0.8;
+        z-index: 1;
+        display: block;
+        position: absolute;
+        bottom: 0;
     } 
+    &__star {
+        z-index: 0;
+        position: absolute;
+        left:45%;
+        top:79%;
+
+    }
+
+    &__mainTitle {
+
+        color:$white;
+        font-size: 2rem;
+        text-transform: uppercase;
+        z-index: 2; 
+        // display: inline-block;
+        // text-align: center;
+        position: absolute;
+        top:85%;
+        left:42%;
+        
+    }
  
 
  
