--- a/src/index.pug
+++ b/src/index.pug
@@ -25,6 +25,16 @@ body
         h1.main-nav__mainTitle Мои Работы   
         img(src="./img/stars2.svg").main-nav__star
         img(src="./img/bg.svg").main-nav__bg
+
+    main.school
+        section.school__site
+            article.school__site__info
+                h1.school__site__title Сайт школы онлайн <br> образования 
+                h3.school__site__subtitle HTML, CSS, JAVASCRIPT
+                a(href="http://loftschool.com" target="_blank"): button(type="button").button Посмотреть все работы
+
+        section.school__preview
+            article.school__preview
         
 
                         
