--- a/src/index.pug
+++ b/src/index.pug
@@ -23,19 +23,38 @@ body
             img(src="./img/i.svg").main-nav__me
             h1.main-nav__aboutme__title Даниил Верещагин
             h3.main-nav__aboutme__subtitle Личный сайт вебразработчик
-        h1.main-nav__mainTitle Мои Работы   
+        h1.block__title Мои Работы   
         img(src="./img/stars2.svg").main-nav__star
         img(src="./img/bg.svg").main-nav__bg
-
     main.school
         section.school__site
             article.school__site__info
                 h1.school__site__title Сайт школы онлайн <br> образования 
                 h3.school__site__subtitle HTML, CSS, JAVASCRIPT
                 a(href="http://loftschool.com" target="_blank"): button(type="button").button Посмотреть все работы
-
+            
         section.school__preview
-            article.school__preview
+            article.school__preview-art
+                img.school__preview-art__img(src="./img/spritephoto.png")
+            .school__preview-case
+                .school__preview-case--left
+                    img(src="./img/mockup.png")
+                .school__preview-case--right
+                    //- img(src="./img/itloft.png")
+        
+    section.about: .wrapper
+        h1.block__title Обо мне
+        img(src="./img/stars1.svg").main-nav__star
+    
+       
+            
+
+
+        
+
+
+                
+
                 
                 
 
