--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -10,3 +10,5 @@
 @import 'modules/main-menu';
 @import 'modules/school';
 @import 'modules/button';
+@import 'modules/block';
+@import 'modules/about';
