--- a/src/sass/modules/_school.scss
+++ b/src/sass/modules/_school.scss
@@ -1,12 +1,19 @@
 .school {
 
-    background-color: #f2f0e8;
-    width: 50%;
     height: 750px;
     position: relative;
 
+    &__site {
 
-    &__site{
+            background-color: #f2f0e8;
+            width: 50%; 
+            display: inline-block;
+            margin-right: -4px;
+            height: 750px;
+            position: absolute;
+            left: 0;
+            
+        
 
         &__info {
         
@@ -31,8 +38,53 @@
         &__subtitle {
             color: #083c96;
         }
-        
-
-
     }
+&__preview {
+
+    background-color: #e3e2de;
+    width: 50%;
+    position: absolute;
+    right: 0;
+    height: 750px;
+   display: inline-block;
+//    position: relative;s
+}
+&__preview-art {
+    
+}
+&__preview-art__img {
+    width: 600px;
+    height: 400px;
+    margin:120px 100px;
+
+}
+
+&__preview-case {
+    width: 100%;
+    height: 230px;
+    position: absolute;
+    bottom: 0;
+    display: inline;  
+    img {
+        display: inline;
+        width: 150px;
+        height: 150px;
+        z-index: -1;
+    }
+
+
+}
+
+&__preview-case--left {
+        //  padding:50px 50px;
+        background: #b7b1b6;
+        z-index: 1;
+        opacity: 0.5;
+
+}
+
+
+
+
+    
 }
