--- a/src/sass/modules/_about.scss
+++ b/src/sass/modules/_about.scss
@@ -1,8 +1,7 @@
 .about {
     position: relative;
-
-    background-image: url('../img/about3.png'); 
+    background-image: url('../img/about4.png'); 
     height: 1400px;
-    width: 1;
-      background-repeat:no-repeat; 
+    width: 100%;
+    background-repeat:no-repeat; 
 }
