--- a/src/index.pug
+++ b/src/index.pug
@@ -50,22 +50,22 @@ body
 
                 .blockquote-left
 
-                        img(src=imgURL, alt="").blockquote-left__img-kdn
-                        img(src=imgsubURL).blockquote-left__subimg
-                        blockquote.blockquote-left__expression text
-                        blockquote.blockquote-left__quote quote
+                        img(src='./img/kdn.png', alt="").blockquote-left__img-kdn
+                        img(src='./img/sub.png').blockquote-left__subimg
+                        blockquote.blockquote-left__expression тот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
+                        blockquote.blockquote-left__quote лучшее wokflow!
 
 
                 .blockquote-right
 
-                        img(src=imgURL, alt="").blockquote-right__img-sab
-                        img(src=imgsubURL).blockquote-right__subimg
-                        blockquote.blockquote-right__expression text
-                        blockquote.blockquote-right__quote quote
+                        img(src='./img/sab.png', alt="").blockquote-right__img-sab
+                        img(src='./img/sub.png').blockquote-right__subimg
+                        blockquote.blockquote-right__expression тот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
+                        blockquote.blockquote-right__quote Верстка выдержит все
 
             +info('./img/kdn.png','./img/','тот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!','лучшее wokflow!')
             +info('./img/sab.png','./img/..', 'тот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!','Верстка выдержит все')
-            
+
        
             
 
