some center fixes

--- a/src/sass/modules/_site-header.scss
+++ b/src/sass/modules/_site-header.scss
@@ -2,6 +2,7 @@
     position: relative;
     background-image:url('../img/bg1.jpg');
     background-origin: cover;
+    // background-size:contain;
     background-repeat: repeat-x ;
     width: 100%;
     height: 698px;
