--- a/src/sass/modules/_block.scss
+++ b/src/sass/modules/_block.scss
@@ -1,4 +1,5 @@
 .block {
+    position: relative;
 
     &__title {
 
@@ -6,9 +7,13 @@
         font-size: 2rem;
         text-transform: uppercase;
         z-index: 2; 
-        position: absolute;
-        top:85%;
-        left:42%;
+        display: flex;
+       
+
+        // position: absolute;
+        // bottom: 10%;
+        // left:50%;
+        // transform: translateX(-50%);
         
         &--about {
             position: absolute;
