--- a/src/sass/modules/_main-nav.scss
+++ b/src/sass/modules/_main-nav.scss
@@ -29,9 +29,12 @@
     }
  }
     &__aboutme {
-    vertical-align: middle;
-    text-align: center;
-    padding:100px;
+
+	position: absolute;
+	top: 50%; left: 50%;
+	transform: translate(-50%,-50%);
+
+
 
     &__title {
 
