markup finished page about

--- a/src/sass/modules/_about.scss
+++ b/src/sass/modules/_about.scss
@@ -1,6 +1,6 @@
 .about {
     position: relative;
-    background-image: url('../img/about4.png'); 
+    // background-image: url('../img/about4.png'); 
     height: 1400px;
     width: 100%;
     background-repeat:no-repeat; 
