--- a/src/sass/modules/_block.scss
+++ b/src/sass/modules/_block.scss
@@ -8,7 +8,8 @@
         text-transform: uppercase;
         z-index: 2; 
         display: flex;
-       
+        align-items: center;
+        justify-content: center;
 
         // position: absolute;
         // bottom: 10%;
