--- a/src/about.pug
+++ b/src/about.pug
@@ -8,127 +8,169 @@ head
     link(rel="stylesheet", href="./css/styles.css")
     title Document
 body
-    header.section.hero
-        .hero__bg 
-            img(src="./img/bg1.jpg", alt="").hero__bg-img
-            .hero__wrapper
-                .hero__socials
-                    ul.socials
-                        each item  in ['vk', 'github', 'in']
-                            li.socials__item
-                                a(href=`${item}`).socials__link 
+    header.section.site-header
 
-                .hamburger.hero__menu
+            .site-header__socials
+                        ul.socials
+                            li.socials__item: a(href="#").socials__link--vk: img(src="./img/vk.svg")
+                            li.socials__item: a(href="#").socials__link--github: img(src="./img/github.svg")
+                            li.socials__item: a(href="#").socials__link--in: img(src="./img/in.svg")
 
-                .user__icon 
-                    .user__avatar
-                .user__title Владимир Астахов
-                .user__suptitle Личный сайт веб разработчика
-                .arrow.hero-scroll-button.arrow-button-pic
-                    svg.arrow-down-pic 
-                        use(x-link:href="./img/sprite.svg#arrow-down")
-                .hero__title
-                    .section__title
-                        svg.section-title__pic 
-                            use(x-link:href="./img/sprite.svg#portfoilio-header")
-    
+
+            .main-menu.site-header__menu: img(src="./img/hamburger.svg")
+
+            .user
+                .user__icon
+                        img.user__avatar
+                h2.user__title Даниил Верещагин
+                p.user__suptitle Личный сайт веб разработчика
+            
+            .arrow.site-header__scroll
+                .arrow-down-pic
+                    img(src="./img/arrow.png")
+
     section.section.about
-        .about__left
-            .triangle.triangle-fill-white.triangle-left
-                svg(viewBox="0 0 1000 150" preserveAspectRatio="none").triangle__svg
-                    polygon(points="0,0 0,150 1000,150")
-            
-            .about__left-title 
-                h2.block-title Обо мне
-
-            .about__left-content
-                .user-description
-                    .user-description__image
-                        img.user-description__avatar(src="#")
-                    .user-description__title 
-                        .block-user__suptitle
-                    .user-description__text
-                         p Я веб разработчик из Новосибирска. Мне 27 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
-                         p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите,как тут всё классно и красиво!
+            .triangle.triangle--white.triangle-left
+                    svg.triangle__svg(viewBox="0 0 1000 150" preserveAspectRatio="none")
+                        polygon(points="0,0 0,150 1000,150")
+            .about-left
+                .block__title.block__title--weight Обо мне
+                .user-description 
+                    .user-description-content
+                        img(src="./img/i.jpg").user-description__avatar
+                    .user-description__title
+                        .block__title.block__title--pd50 Кто я  
+                    .user-description__text 
+                        p Я веб разработчик из Новосибирска. Мне 27 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
+                        p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите,как тут всё классно и красиво!
+        
 
 
-        .about__right
-            .triangle.triangle-fill-beige.about-left-triangle
-                svg(viewBox="0 0 1000 150" preserveAspectRatio="none").triangle__svg
-                    polygon(points="1000,0 1000,150 0,150")
-            .about__right-title
-                h2.block-title Чем я могу вам быть полезен
-            
-            .about__right-description
-                p Больше всего меня привлекет Frontend разработка, но я также знаком и могу решать не сложные задачи на Backend. Но давайте по порядку.
-            
-            .about__right-content
-                ul.skills-list
-                    each item in ['Frontend', 'Backend', 'Workflow']
-                        li.skills-list__item
-                            .skill-row
-                            .skill-row-title #{item}
-                        ul.skills-row-list
-                            li.skills-row__item
-                               .skill
-                                svg.skill__circle
-                                .skill__title
-    
-    section.section.map 
-        .google-map
-        .contacts
-            .contacts__title
-                .block-title  Контакты
-            
-                //- ul.contacts__list
-                //-  - 
-                //-     var contacts = [
-                //-         ['vk', 'skype_kdn'],
-                //-         ['mail', 'astahov@gmail.com'],
-                //-         ['phone', '+7 931 200 93 24'],
-                //-     ]
+            .triangle.triangle--white.triangle-right
+                    svg.triangle__svg(viewBox="0 0 1000 150" preserveAspectRatio="none" )
+                        polygon(points="1000,0 1000,150 0,150")
 
-                //-     each item in contacts
-                //-         li.contacts__item.contact-row
-                //-             .contact-row__icon #{item[0]}
-                            .contact-row__content #{item[1]}
-    
-    footer.site-footer
-        .site-footer__wrapper
-            .site-footer-block
-                .site-footer__motto Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool.
-
-            .site-footer-block
-                nav.site-footer__menu   
-                     ul.menu
-                        each item in ['Мои работы', 'Обо мне', 'Блог', 'Авторизация']
-                            li.menu__item: a(href=`${item}`).menu__link #{item}
-                .site-footer__socials
-                    ul.socials.socials--rounded
-                        each item  in ['vk', 'github', 'in']
-                            li.socials__item
-                                a(href=`${item}`).socials__link 
-
-            .site-footer-block
-
-                article.site-footer__info
-                    ul.contacts__list.contacts__list--vert
-                        li.socials__item--vert skype__kdn 
-                        li.socials__item--vert  astahov@gmail.com
-                        li.socials__item--vert +7 931 2009394
-                        li.socials__item--vert г.Новосибирск  ул Инская
+            .about-right
+                .about-right__title
+                    .block__title.block__title--right  Чем я могу быть <br> вам полезен
             
-            .site-footer__underfooter
-                .site-footer__motto © Владимир Астахов | Создано с любовью LoftSchool 2017
-            
-            
-                   
-                    
+                .about-right__description
+                    p Больше всего меня привлекет Frontend разработка, но я также знаком и могу решать&nbspне сложные задачи Backend. Но давайте по порядку.
+                
+                
                 
 
+            
 
-                        
+                    //- .user__icon 
+                    //-     .user__avatar
+                    //- .user__title Владимир Астахов
+                    //- .user__suptitle Личный сайт веб разработчика
+                    //- .arrow.hero-scroll-button.arrow-button-pic
+                    //-     svg.arrow-down-pic 
+                    //-         use(x-link:href="./img/sprite.svg#arrow-down")
+                    //- .site-header__title
+                    //-     .section__title
+                    //-         svg.section-title__pic 
+                    //-             use(x-link:href="./img/sprite.svg#portfoilio-header")
 
-                                    
+                        //-section.section.about
+                        //-     .about__left
+                        //-         .triangle.triangle-fill-white.triangle-left
+                        //-             svg(viewBox="0 0 1000 150" preserveAspectRatio="none").triangle__svg
+                        //-                 polygon(points="0,0 0,150 1000,150")
+                                
+                        //-         .about__left-title 
+                        //-             h2.block-title Обо мне
+
+                        //-         .about__left-content
+                        //-             .user-description
+                        //-                 .user-description__image
+                        //-                     img.user-description__avatar(src="#")
+                        //-                 .user-description__title 
+                        //-                     .block-user__suptitle
+                        //-                 .user-description__text
+                        //-                         p Я веб разработчик из Новосибирска. Мне 27 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
+                        //-                         p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите,как тут всё классно и красиво!
+
+
+                        //-     .about__right
+                        //-         .triangle.triangle-fill-beige.about-left-triangle
+                        //-             svg(viewBox="0 0 1000 150" preserveAspectRatio="none").triangle__svg
+                        //-                 polygon(points="1000,0 1000,150 0,150")
+                        //-         .about__right-title
+                        //-             h2.block-title Чем я могу вам быть полезен
+                                
+                        //-         .about__right-description
+                        //-             p Больше всего меня привлекет Frontend разработка, но я также знаком и могу решать не сложные задачи на Backend. Но давайте по порядку.
+                                
+                        //-         .about__right-content
+                        //-             ul.skills-list
+                        //-                 each item in ['Frontend', 'Backend', 'Workflow']
+                        //-                     li.skills-list__item
+                        //-                         .skill-row
+                        //-                         .skill-row-title #{item}
+                        //-                     ul.skills-row-list
+                        //-                         li.skills-row__item
+                        //-                             .skill
+                        //-                             svg.skill__circle
+                        //-                             .skill__title
+
+                        //- section.section.map 
+                        //-     .google-map
+                        //-     .contacts
+                        //-         .contacts__title
+                        //-             .block-title  Контакты
+                                
+                        //-             //- ul.contacts__list
+                        //-             //-  - 
+                        //-             //-     var contacts = [
+                        //-             //-         ['vk', 'skype_kdn'],
+                        //-             //-         ['mail', 'astahov@gmail.com'],
+                        //-             //-         ['phone', '+7 931 200 93 24'],
+                        //-             //-     ]
+
+                        //-             //-     each item in contacts
+                        //-             //-         li.contacts__item.contact-row
+                        //-             //-             .contact-row__icon #{item[0]}
+                        //-                         .contact-row__content #{item[1]}
+
+                        //- footer.site-footer
+                        //-     .site-footer__wrapper
+                        //-         .site-footer-block
+                        //-             .site-footer__motto Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool.
+
+                        //-         .site-footer-block
+                        //-             nav.site-footer__menu   
+                        //-                     ul.menu
+                        //-                     each item in ['Мои работы', 'Обо мне', 'Блог', 'Авторизация']
+                        //-                         li.menu__item: a(href=`${item}`).menu__link #{item}
+                        //-             .site-footer__socials
+                        //-                 ul.socials.socials--rounded
+                        //-                     each item  in ['vk', 'github', 'in']
+                        //-                         li.socials__item
+                        //-                             a(href=`${item}`).socials__link 
+
+                        //-         .site-footer-block
+
+                        //-             article.site-footer__info
+                        //-                 ul.contacts__list.contacts__list--vert
+                        //-                     li.socials__item--vert skype__kdn 
+                        //-                     li.socials__item--vert  astahov@gmail.com
+                        //-                     li.socials__item--vert +7 931 2009394
+                        //-                     li.socials__item--vert г.Новосибирск  ул Инская
+                                
+                        //-         .site-footer__underfooter
+                        //-             .site-footer__motto © Владимир Астахов | Создано с любовью LoftSchool 2017
+                                
+                                
+                                        
+                                        
+                    
+
+
+                            
+
+                                        
 
 
