--- a/src/sass/base/_globals.scss
+++ b/src/sass/base/_globals.scss
@@ -20,4 +20,8 @@ ul {
     list-style-type: none;
     padding:0;
     margin: 0;
+    display: inline-block;
+}
+li {
+    display: inline-block;
 }
