--- a/src/sass/modules/_hero.scss
+++ b/src/sass/modules/_hero.scss
@@ -1,5 +1,7 @@
 .hero {
-overflow:hidden;
+
+
+    overflow:hidden;
 
 
     &__bg {
@@ -10,6 +12,20 @@ overflow:hidden;
             width: 100%;
             height: 100%;
         }
+
+    }
+    &__wrapper {
+
+        position: relative;
+        height: 100%;
+
+
+    }
+    &__socials {
+        
+        position: absolute;
+        top:10px;
+
 
     }
 
