--- a/src/sass/modules/_site-header.scss
+++ b/src/sass/modules/_site-header.scss
@@ -1,10 +1,27 @@
 .site-header {
     position: relative;
     background-image:url('../img/bg1.jpg');
-    background-origin: cover;
-    // background-size:contain;
+    background-origin: cover;;
     background-repeat: repeat-x ;
     width: 100%;
     height: 698px;
-    box-shadow: 0 0 1px 1px black;
+    // box-shadow: 0 0 1px 1px black;
+
+    &__socials {
+        position: absolute;
+        top:30px;
+        left: 0px;
+
+        &__item {
+        padding:0 30px;
+
+        }
+    }
+
+    &__menu {
+
+        position: absolute;
+        right:30px;
+        top:30px;
+    }
 }
