--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -15,3 +15,8 @@
 @import 'modules/star';
 @import 'modules/hero';
 @import 'modules/section';
+@import 'modules/socials';
+@import 'modules/hamburger';
+@import 'modules/user';
+@import 'modules/triangle';
+@import 'modules/user-description';
