section about cmpl

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -20,3 +20,5 @@
 @import 'modules/user';
 @import 'modules/triangle';
 @import 'modules/user-description';
+@import 'modules/skills';
+@import 'modules/skill';
