--- a/src/about.pug
+++ b/src/about.pug
@@ -51,12 +51,30 @@ body
                         polygon(points="1000,0 1000,150 0,150")
 
             .about-right
-                .about-right__title
-                    .block__title.block__title--right  Чем я могу быть <br> вам полезен
-            
-                .about-right__description
-                    p Больше всего меня привлекет Frontend разработка, но я также знаком и могу решать&nbspне сложные задачи Backend. Но давайте по порядку.
+                .about-right__wrapper 
+                    .about-right__title
+                        .block__title.block__title--right  Чем я могу быть <br> вам полезен
                 
+                    .about-right__description
+                        p Больше всего меня привлекет Frontend разработка, но я также знаком и могу решать&nbspне сложные задачи Backend. Но давайте по порядку.
+                    .about-right-content 
+                        ul.skills
+                            each item in [ "Frontend", "Backend ", "Workflow"]
+                                li.skills__item
+                                    .skills-row
+                                        .skills-row__title #{item}
+                                    ul.skills-row__list
+                                        li.skills-row__item
+                                            .skill
+                                                svg.skill__circle
+                                                    use(xlink:href="./img/sprite.svg#")
+                                                .skill__title
+    
+    section.section.map
+        img(src="./img/map.png")
+                        
+                                    
+
                 
                 
 
