--- a/src/sass/base/_globals.scss
+++ b/src/sass/base/_globals.scss
@@ -22,6 +22,6 @@ ul {
     margin: 0;
     display: inline-block;
 }
-li {
-    display: inline-block;
-}
+// li {
+//     display: inline-block;
+// }
