--- a/src/sass/modules/_about.scss
+++ b/src/sass/modules/_about.scss
@@ -18,11 +18,19 @@
         width: 50%;
         float: left;
         
+        &__wrapper {
+
+            padding: 0 20px;
+
+        }
         &__description {
 
             margin-left:40px;
             margin-right: 100px;
 
+        }
+        &-content {
+            margin: 0 50px;
         }
 
     }
