--- a/src/sass/modules/_block.scss
+++ b/src/sass/modules/_block.scss
@@ -46,6 +46,10 @@
             padding:0 80px;
             display: inline-block;
         }
+
+        &--right {
+            padding-bottom: 50px;
+        }
        
     }
 
