--- a/src/sass/modules/_triangle.scss
+++ b/src/sass/modules/_triangle.scss
@@ -1,14 +1,15 @@
 .triangle {
-
-
     width:100%;
     fill:beige;
     position: absolute;
     bottom: 100%;
+    height: 150px;
+
   
     &__svg {
         height: 100%;
         width: 100%;
         fill:inherit;
     }
+        
 }   
