markup and styling basic finished,need styling someone fixes things

--- a/src/sass/modules/_about.scss
+++ b/src/sass/modules/_about.scss
@@ -1,7 +1,7 @@
 .about {
     position: relative;
     // background-image: url('../img/about4.png'); 
-    height: 1400px;
+    height: 900px;
     width: 100%;
     background-repeat:no-repeat; 
     background-color: beige;
@@ -27,6 +27,8 @@
 
             margin-left:40px;
             margin-right: 100px;
+            font-family: 'Roboto',sans-serif;
+            color:#7f8084;
 
         }
         &-content {
