--- a/src/sass/modules/_user-description.scss
+++ b/src/sass/modules/_user-description.scss
@@ -7,16 +7,17 @@
 
     &__avatar {
         height: 450px;
-        max-width: 450px;
+        // max-width: 450px;
     }
     img {
-      
+
+        height: 100%;
         width: 100%;
     }
     &__text  {
 
         color:#474b57;
-        font-family: 'Arial',sans-serif;
+        font-family: 'Roboto',sans-serif;
         padding-top: 30px;
     }
 }
