--- a/src/sass/base/_globals.scss
+++ b/src/sass/base/_globals.scss
@@ -2,6 +2,7 @@ html {
     padding:0;
     margin: 0;
     overflow-x: hidden;
+    height: 100%;
 }
 *,::before,::after {
     box-sizing: border-box;
@@ -10,6 +11,7 @@ body {
     font-size: 16px;
     margin: 0;
     padding:0;
+    height: 100%;
 }
 p,h1 {
 
