--- a/src/sass/modules/_user.scss
+++ b/src/sass/modules/_user.scss
@@ -7,6 +7,6 @@
     transform: translate(-50%,-50%);
     text-align: center;
     color:white;
-    font-family: 'Arial',sans-serif;
+    font-family: 'Roboto',sans-serif;
 
 }
