nearly complete page blog

--- a/src/about.pug
+++ b/src/about.pug
@@ -27,7 +27,7 @@ body
             
             .arrow.site-header__scroll
                 .arrow-down-pic
-                    img(src="./img/arrow.png")
+                    img(src="./img/arrow_down.svg")
 
     section.section.about
             .triangle.triangle--white.triangle-left
