--- a/src/sass/modules/_block.scss
+++ b/src/sass/modules/_block.scss
@@ -8,10 +8,11 @@
         text-transform: uppercase;
         text-align: center;
         position: relative;
-          font-family: 'SansusWebsimmo',sans-serif;
-
+        font-family: 'SansusWebsimmo',sans-serif;
+        position: absolute;
+        top
         // &::before {
-
+            
         //     content: '';
         //     position: absolute;
         //     top:30px;
