--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -27,3 +27,5 @@
 @import 'modules/contacts';
 @import 'modules/google-map';
 @import 'modules/map';
+@import 'modules/arrow';
+@import 'modules/blog';
