--- a/src/sass/modules/_star.scss
+++ b/src/sass/modules/_star.scss
@@ -3,8 +3,9 @@
     &__img {
         z-index: 0;
         position: absolute;
-        left:45%;
-        top:79%;
+        left:50%;
+        top:90%;
+        transform: translate(-50%,-50%);
 
 
         &--about {
