begin page welcome

--- a/src/about.pug
+++ b/src/about.pug
@@ -30,7 +30,7 @@ body
                     img(src="./img/arrow_down.svg")
 
     section.section.about
-            .triangle.triangle--white.triangle-left
+            .triangle.triangle--beige.triangle-left
                     svg.triangle__svg(viewBox="0 0 1000 150" preserveAspectRatio="none")
                         polygon(points="0,0 0,150 1000,150")
             .about-left
@@ -46,7 +46,7 @@ body
         
 
 
-            .triangle.triangle--white.triangle-right
+            .triangle.triangle--beige.triangle-right
                     svg.triangle__svg(viewBox="0 0 1000 150" preserveAspectRatio="none" )
                         polygon(points="1000,0 1000,150 0,150")
 
