--- a/src/sass/modules/_section.scss
+++ b/src/sass/modules/_section.scss
@@ -1,7 +1,12 @@
 .section {
 
     position: relative;
-    width: 100%;
 
+    width: 100%;
+    &--welcome {
+        
+        height: 100%;
+
+    }
 
 }
