--- a/src/sass/modules/_button.scss
+++ b/src/sass/modules/_button.scss
@@ -7,5 +7,21 @@
     font-family: 'Roboto',sans-serif;
     outline: none;
     cursor: pointer;
+    text-decoration: none;
+
+
+    &--auth {
+        background: none;
+        position: absolute;
+        top:22px;
+        right:100px;
+        padding:  15px 40px;
+        border:1px solid white;
+        transition: 0.5s ease-in-out;
+        
+        &:hover {
+            background-color: #004cd1;
+        }
+    }
 
 }
