--- a/src/sass/modules/_site-header.scss
+++ b/src/sass/modules/_site-header.scss
@@ -1,14 +1,18 @@
 .site-header {
     position: relative;
     background-image:url('../img/bg1.jpg');
-    background-origin: cover;;
+    background-size: cover;
     background-repeat: repeat-x ;
     width: 100%;
-    height: 658px;
+    height: 658px;   
     // box-shadow: 0 0 1px 1px black;
     &--blog {
     height: 400px;
 
+    }
+    &--welcome {
+        background-image: url('../img/welcome1.png'); 
+        height: 100vh;
     }
     &__socials {
         position: absolute;
