--- a/src/sass/modules/_socials.scss
+++ b/src/sass/modules/_socials.scss
@@ -9,9 +9,24 @@
 
     &__item {
 
-    padding-right:30px;
     display: inline-block;
+    width: 30px;
+    height: 30px;
+    margin-right: 30px;
 
+    }
+    
+    svg {
+    
+    width: 30px;
+    height: 30px;
+    fill:white;
+    // vertical-align: top;
+    &:hover {
+        fill:#0548be;
+        transition: 0.5s ease-in-out;
+    }
+    
     }
 
 
