--- a/src/sass/modules/_triangle.scss
+++ b/src/sass/modules/_triangle.scss
@@ -1,6 +1,5 @@
 .triangle {
     width:100%;
-    fill:beige;
     position: absolute;
     bottom: 100%;
     height: 150px;
@@ -10,6 +9,13 @@
         height: 100%;
         width: 100%;
         fill:inherit;
+    }
+    &--white {
+        fill: #faf8f0;
+    }
+    &--beige {
+       
+         fill:beige;
     }
         
 }   
