--- a/src/sass/modules/_user.scss
+++ b/src/sass/modules/_user.scss
@@ -23,4 +23,17 @@
         }
     }
 
+    &__avatar {
+
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+
+        img {
+            width: 100%;
+            height: 100%;
+
+        }
+    }
+
 }
