welcome page complete

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,111 +1,28 @@
-
 <!DOCTYPE html>
 html(lang="en")
 head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    link(rel="stylesheet", href="./css/styles.css")
+    link(rel="stylesheet", href="css/styles.css")
     title Document
 body
-    header.site-header
-        nav.main-nav    
-            .main-nav__social
-                -var arrimg = ['./img/vk.svg','./img/github.svg','./img/in.svg']
-                -var arrclass = ['vk','github','in']
-                - for(var i=0;i<=2;i++)  
-                    a(href="#" target="_blank")
-                            img(src=arrimg[i] class=`main-nav__social--${arrclass[i]}`)
-                 
-        nav.main-menu
-            img(src="./img/hamburger.svg").main-menu__menu
-        article.main-nav__aboutme: .wrapper
-            img(src="./img/i.svg").main-nav__me
-            h1.main-nav__aboutme__title Даниил Верещагин
-            h3.main-nav__aboutme__subtitle Личный сайт вебразработчик
-        h1.block__title Мои Работы   
-        img(src="./img/stars2.svg").star__img
-        img(src="./img/bg.svg").main-nav__bg
-    main.school
-        section.school__site
-            article.school__site__info
-                h1.school__site__title Сайт школы онлайн <br> образования 
-                h3.school__site__subtitle HTML, CSS, JAVASCRIPT
-                a(href="http://loftschool.com" target="_blank"): button(type="button").button Посмотреть все работы
-            
-        section.school__preview
-            article.school__preview-art
-                img.school__preview-art__img(src="./img/spritephoto.png")
-            .school__preview-case
-                .school__preview-case--left
-                    img(src="./img/mockup.png")
-                .school__preview-case--right
-                    //- img(src="./img/itloft.png")
-        
-    section.about: .wrapper
-        h1.block__title.block__title--about Что обо мне <br>говорят
-        img(src="./img/stars3.svg").star__img--about
-        .blockquote-container
-            mixin info(imgURL,imgsubURL,text,quote)
+    header.section--welcome.site-header--welcome
+        a(href="#").button.button--auth Авторизоваться
 
-                .blockquote-left
-
-                        img(src='./img/kdn.png', alt="").blockquote-left__img-kdn
-                        img(src='./img/sub.png').blockquote-left__subimg
-                        blockquote.blockquote-left__expression тот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
-                        blockquote.blockquote-left__quote лучшее wokflow!
-
-
-                .blockquote-right
-
-                        img(src='./img/sab.png', alt="").blockquote-right__img-sab
-                        img(src='./img/sub.png').blockquote-right__subimg
-                        blockquote.blockquote-right__expression тот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
-                        blockquote.blockquote-right__quote Верстка выдержит все
-
-            +info('./img/kdn.png','./img/','тот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!','лучшее wokflow!')
-            +info('./img/sab.png','./img/..', 'тот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!','Верстка выдержит все')
-    footer.site-footer
-        .site-footer__block
-            h2.site-footer__motto Этот сайт я сделал в рамках обучения в Школе <br>онлайн образования LoftSchool. 
-
-        .site-footer__block
-            nav.site-footer__menu
-         
-                ul.main-menu
-                   -var menuitems= ['Мои работы', 'Обо мне','Блог', 'Авторизация'];
-                   -var menuLinks = ['#','#','#', '#'];
-                   -for (var i=0;i<4;i++)
-                        li.main-menu__item: a.main-menu__link(href=menuLinks[i])=menuitems[i]
-
-            .site-footer__social 
-                 ul.socials.socials--footer
-                    li.socials__item: a(href="#").socials__link--vk: img(src="./img/vk.svg")
-                    li.socials__item: a(href="#").socials__link--github: img(src="./img/github.svg")
-                    li.socials__item: a(href="#").socials__link--in: img(src="./img/in.svg")
-        .site-footer__block
-            .site-footer__contacts
-                ul.contacts__list.contacts__list--footer
-                    li.contacts__item.contacts__item--block skype__kdn
-                    li.contacts__item.contacts__item--block astakhov@gmail.com
-                    li.contacts__item.contacts__item--block +7(952)-796-11-99
-                    li.contacts__item.contacts__item--block г. Калининград 
-
-        .site-footer__underfooter
-            h1.site-footer__underfootermotto © Владимир Астахов | с любовью LoftSchool | 2017
-
-       
-            
-
-
-        
-
-
+        .user.user--welcome
+            .user-icon
+                img.user__avatar(src="./img/avatar.jpg")
+            h2.user__title Даниил Верещагин
+            p.user__suptitle Личный сайт веб разработчика
+            ul.socials
+                li.socials__item: a(href="#").socials__link--vk: svg: use(xlink:href="./img/sprite.svg#vk")
+                li.socials__item: a(href="#").socials__link--github: svg: use(xlink:href="./img/sprite.svg#github")
+                li.socials__item: a(href="#").socials__link--in: svg: use(xlink:href="./img/sprite.svg#in")
                 
+            ul.main-menu--welcome
+                - var menuitems = ['Мои работы', 'Обо мне', 'Блог'];
+                - var menulinks = ['works.html','about.html','blog.html'];
+                - for (var i=0; i<3;i++)
+                    li.main-menu__item.main-menu__item--welcome: a.main-menu__link--welcome(href=menulinks[i])=menuitems[i]
 
-                
-                
-
-                        
-    
-             
