--- a/src/sass/modules/_socials.scss
+++ b/src/sass/modules/_socials.scss
@@ -2,9 +2,16 @@
 
     padding-top:30px;
     padding-left: 30px;
+    padding-bottom: 40px;
+    
 
     &--footer {
         padding:0;
+    }
+    &--welcome {
+        display: inline-block;
+        text-align:center;
+        margin-bottom: 50px;
     }
 
     &__item {
@@ -21,7 +28,8 @@
     width: 30px;
     height: 30px;
     fill:white;
-    // vertical-align: top;
+    vertical-align: middle;
+    cursor: pointer;
     &:hover {
         fill:#0548be;
         transition: 0.5s ease-in-out;
