--- a/src/sass/base/_globals.scss
+++ b/src/sass/base/_globals.scss
@@ -22,7 +22,7 @@ ul {
     list-style-type: none;
     padding:0;
     margin: 0;
-    display: inline-block;
+    // display: inline-block;s
 }
 // li {
 //     display: inline-block;
