--- a/src/sass/modules/_user.scss
+++ b/src/sass/modules/_user.scss
@@ -9,6 +9,19 @@
     color:white;
     font-family: 'Roboto',sans-serif;
 
+
+    &--welcome {
+       background: rgba(#182742,0.8);
+        top:50%;
+        padding:40px 60px;
+        padding-top:40px;
+        padding-right: 0;
+        padding-left: 0;
+        padding-bottom: 0;
+
+              
+    }
+
     &--blog {
         top:130px;
     }
